Update menu: Fix WhatsApp on iPhone, change primary color to #09839A, merge search and categories with mobile support

--- a/resources/scss/config/_variables.scss
+++ b/resources/scss/config/_variables.scss
@@ -48,7 +48,7 @@ $cyan:    #4ecac2;
 // scss-docs-end color-variables
 
 // scss-docs-start theme-color-variables
-$primary:       $orange;
+$primary:       #09839A;
 $secondary:     $gray-600;
 $blue:          $blue;
 $indigo:        $indigo;
